Making additional compiler arguments configurable instead of enablePreview flag.